# camera_test

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cam_utils.cpp  cam_utils.h  jniapi.cpp  log.h
app/src/main/java/com/example/camera/: CamRenderer.kt  CamSurfaceView.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
